# MedBench-LLM

./: .env_example  Discharge_Summary_Test_240512.ipynb  README.md  pyproject.toml  run_evaluation.py
basic/: basic.py
basic/prompts/: basic_both.md  basic_human.md  basic_system.md
decompose/: __init__.py  combine_all_sections.py  extracted_structure.py  generate_discharge_meds.py  generate_hospital_course.py  generate_operation_section.py  generate_plan.py  generate_section_1.py  read_decompose_prompt.py
decompose/prompts/: ED_extract.md  ED_generate.md  final_summary.md  hosp_combine.md  hosp_d1_sum.md  hosp_progress_sum.md  lab_trend.md  meds_extract.md  meds_generate.md  op_details_extact.md  op_sum.md  operation_details_extact.md  plan_extract.md  plan_generate.md  progress_sum.md  s1_ED_extract.md  s1_generate.md  s1_sec_diagnosis_extract.md
helpers/: __init__.py  case.py  case_with_subsections.py  init_model.py  lab_tests.py  medications.py  note_section.py  raw_case.py  read_all_cases.py  read_data.py  read_prompt.py  single_day.py  strip_delimeters.py
map_reduce/: __init__.py  create_mapreduce_df.py  load_docs.py  map_reduce.py  read_mapreduce_prompt.py
map_reduce/prompts/: map.md
notebooks/: Discharge_Summary_Test_240512.ipynb
prompting/: Case.py  CaseWithSubsections.py  NoteSection.py  basic.py  read_data.py  read_prompt.py
prompting/decompose/: __init__.py  combine_all_sections.py  extract_text_first_section.py  generate_discharge_meds.py  generate_hospital_course.py  (+4 more)
refine/: create_refine_df.py  read_refine_prompt.py  refine.py
(+41 files in other folders)
